--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Week 9 Homework</h1>
     <div id="map"></div>
     <script>
-        src vg_1 = "https://raw.githubusercontent.com/ziyingheng0701/FIT3179/main/week9_homework.json";
+        var vg_1 = "week9_homework.json";
         vegaEmbed("#map", vg_1).then(function(result) {
         }).catch(console.error);
     </script>
